# midi_play

./: .gitmodules  Cargo.toml  build.rs
src/: driver.rs  main.rs  midi_file.rs  thread_boost.rs  window.rs
