[package]
name = "midi_play"
version = "0.1.0"
authors = ["Matt Bilker <me@mbilker.us>"]
edition = "2018"

[dependencies]
anyhow = "1.0.28"
ctrlc = "3.1.4"
rimd = { path = "rimd" }
windows = "0.17.1"

[dependencies.winapi]
version = "0.3.9"
features = ["basetsd", "minwindef", "mmeapi", "mmsystem", "ntdef", "synchapi"]

[build-dependencies]
windows = "0.17.1"
